ADD size, qty and first colour pass over

--- a/config.html
+++ b/config.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="md:w-1/2 w-full md:pl-10 mb-6 md:mb-0">
                     <h2 class="text-sm title-font text-gray-500 tracking-widest">Convertibles</h2>
-                    <h1 class="text-red-700 text-3xl title-font font-medium mb-4">Join The Jumper!</h1>
+                    <h1 class="text-red-700 text-3xl title-font font-medium mb-4">Do It Yourself Dress</h1>
                     <div class="flex mb-4">
                         <a id="defaultOpen" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1 cursor-pointer menuToggle" onclick="tabOpen(event, 'overview')">Description</a>
                         <a class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1 cursor-pointer menuToggle" onclick="tabOpen(event, 'customize')">Customize</a>
