ADD new collar files

--- a/config.html
+++ b/config.html
@@ -198,7 +198,7 @@
                                             <option value="frill">Frilly</option>
                                         </select>
                                     </div>
-                                    <div class="flex">
+                                    <div class="flex flex-wrap">
                                         <button data-name="orange" onclick="changeCollarColour('orange','skirt')" class="orange w-8 h-8 mr-4 mb-2 skirt-button rounded-full relative"></button>
                                         <button data-name="lightblue" onclick="changeCollarColour('lightblue','skirt')" class="lightblue w-8 h-8 mr-4 mb-2 skirt-button rounded-full relative"></button>
                                         <button data-name="yellow" onclick="changeCollarColour('yellow','skirt')" class="yellow w-8 h-8 mr-4 mb-2 skirt-button rounded-full relative selected"></button>
