--- a/home.html
+++ b/home.html
@@ -240,7 +240,7 @@
                   </div>
                   <div class="flex-grow pl-4">
                     <h2 class="font-bold title-font text-sm text-red-700 mb-1 tracking-wider">STEP 2</h2>
-                    <p class="leading-relaxed">The convertables are then created with your child’s chosen colours and design.</p>
+                    <p class="leading-relaxed">The convertibles are then created with your child’s chosen colours and design.</p>
                   </div>
                 </div>
                 <div class="flex relative pb-12" data-aos="fade-right"
@@ -255,7 +255,7 @@
                   </div>
                   <div class="flex-grow pl-4">
                     <h2 class="font-bold title-font text-sm text-red-700 mb-1 tracking-wider">STEP 3</h2>
-                    <p class="leading-relaxed">The child builds their fully customizable convertable.</p>
+                    <p class="leading-relaxed">The child builds their fully customizable convertible.</p>
                   </div>
                 </div>
                 <div class="flex relative pb-12" data-aos="fade-right"
@@ -271,7 +271,7 @@
                   </div>
                   <div class="flex-grow pl-4">
                     <h2 class="font-bold title-font text-sm text-red-700 mb-1 tracking-wider">STEP 4</h2>
-                    <p class="leading-relaxed">As the child grows they can make their convertable grow with them!</p>
+                    <p class="leading-relaxed">As the child grows they can make their convertible grow with them!</p>
                   </div>
                 </div>
                 <div class="flex relative" data-aos="fade-right"
@@ -356,7 +356,7 @@
 
                   It may be a little wobbly to start with, let’s offer it a platform to grow! Stitching on the outside of the Convertibles celebrates the beauty of the handmade, our unique marks we make, and allows this fundamental building block of a garment to stand in the limelight that it deserves.</p>
                 <div class="flex justify-center">
-                  <button class="inline-flex text-white bg-red-600 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">More</button>
+                  <button class="inline-flex text-white bg-red-600 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg"><a href="config.html">Start Building</a></button>
                 </div>
                 
               </div>
